---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 01.10.2022
  Bugfixes:
    - Fix specific dock crash after migration issue. (Thanks Alphaprime!)
    - Changing dock mode will no longer drain the accumulator.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 01.10.2022
  Features:
    - Docks now have two modes that can be toggled with R. Active mode has the spider fully functional but costs spaceship integrity. Passive mode has spider fully disabled which costs zero spaceship integrity.
    - Dock breathing light now changes colour dependent on mode.
    - Now closes GUI after undocking event.
  Changes:
    - Harsher migration scrpts that ensures no spider is lost.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 24.09.2022
  Features:
    - Docked spiders are now fully functional.
  Changes:
    - Now requires Factorio 1.1.69 or higher.
    - Better compatability with Spidertron Enhancements and Spidertron Patrols. (Thanks Xorimuth!)
    - Changed `Undock` button location.
  Bugfixes:
    - Fix possible crash when docked spider no longer exist after mod change.
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 18.09.2022
  Features:
    - Space Spidertron now hides in another menu-simulation.
  Changes:
    - Space Spidertron recipe now uses Aeroframe Poles instead of Beryllium Plate. 
    - Less harsh compatability with Constructron Continued.
  Bugfixes:
    - Remove build-smoke during failed undocking attempt.
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 15.09.2022
  Features:
    - Space Spidertron now slowly hovers instead of bopping up and down. (Thanks Xorimuth!)